--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -21,3 +21,33 @@ body {
   border: 1px solid #fff;
   border-radius: 1rem;
 }
+
+.header__main::before {
+  content: '';
+  display: inline-block;
+  width: 130vw;
+  height: 100vh;
+  position: fixed;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  background-image: url('../img/background.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+
+.header__main::after{
+  content: '';
+  display: inline-block;
+  width: 100vw;
+  height: 80vh;
+  position: fixed;
+  z-index: -1;
+  bottom: 0;
+  right: 0;
+  background-image: url('../img/background.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  transform: rotate(180deg);
+}
