--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -3,6 +3,20 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  position: relative;
+}
+
+.header::after {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  width: 2rem;
+  height: 2rem;
+  background-image: url("../img/icons/dots.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .header .avatar {
