--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -15,15 +15,15 @@ body {
   color: #fff;
 }
 
-.header__main {
+.main {
   margin: 1rem;
   padding: 1rem;
   border: 1px solid #fff;
   border-radius: 1rem;
 }
 
-.header__main::before,
-.header__main::after 
+.main::before,
+.main::after 
 {
   content: '';
   display: inline-block;
@@ -39,7 +39,7 @@ body {
 }
 
 
-.header__main::after{
+.main::after{
   top: auto;
   left: auto;
   bottom: 0;
