--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -25,7 +25,7 @@
 }
 
 @media only screen and (min-width: 1024px){
-  .header__main {
+  .main {
     max-width: 1024px;
     margin: 1rem auto;
   }
