--- a/assets/css/acordeon.css
+++ b/assets/css/acordeon.css
@@ -40,16 +40,23 @@
   background-image: url('../img/icons/arrow-top.svg');
   background-repeat: no-repeat;
   background-size: contain;
+  transition: .25s;
 }
 
 .acordeon.open .trigger::after{
   transform: rotate(180deg);
 }
 
-.content {
-  display: none;
+.acordeon .content {
+  overflow: hidden;
+  height: 0;
+  opacity: 0;
+  transition: opacity .25s ease-in-out;
 }
 
 .acordeon.open .content {
-  display: inline-block;
+  display: block;
+  height: auto;
+  padding: 0 1rem 1rem 1rem;
+  opacity: 1;
 }
