--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -15,6 +15,15 @@ body {
   color: #fff;
 }
 
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
 .main {
   margin: 1rem;
   padding: 1rem;
