--- a/assets/css/languages.css
+++ b/assets/css/languages.css
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 1rem;
+  padding: .3rem;
   font-weight: 700;
   font-size: 1.10em;
 }
