--- a/assets/css/acordeon.css
+++ b/assets/css/acordeon.css
@@ -20,9 +20,8 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  font-size: 1.5em;
   font-weight: 700;
-  padding: 1rem 2rem;
+  padding: 1rem;
   background: transparent;
   color: #fff;
   border: none;
