--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -22,6 +22,11 @@
   .header__info{
     grid-row: info;
   }
+
+  .skills {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 @media only screen and (min-width: 1024px){
